Fixed BookForm error indicator alignment

--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -35,4 +35,7 @@ $v-focus-color: #50a2f5;
   	height: 30px !important;
   }
   
+  .v-formlayout .v-errorindicator {
+    height: 30px;
+  }
 }
